# renderer-project

./: .gitignore  CMakeLists.txt  README.md  renderer.sln  renderer.vcxproj
models/african_head/: african_head.mtl
models/bat/: Batman_V3_Eye_High_D.tga  bat.mtl
models/colt/: colt_.obj.mtl
models/diablo/: diablo3.mtl
src/: geometry.cpp  geometry.h  main.cpp  material.cpp  material.h  model.cpp  model.h  primitives.cpp  primitives.h
